syntax = "proto3";

package proxy_proto;

import "movie.proto";

option go_package = "./;proto";

message CreateNewMovieRequest {
  Movie movie = 1[json_name = "movie"];
}

message CreateNewMovieResponse {}