syntax = "proto3";

package proxy_proto;


option go_package = "./;proto";

import "google/protobuf/any.proto";


message GetIndicesRequest {
  repeated string indices_name = 1 [json_name = "indices_name"];
}

message GetIndicesResponse {
    IndexInfo index_info = 1 [json_name="indexInfo"];
}

message IndexInfo {
  map<string, google.protobuf.Any> indices = 1 [json_name = "indices"];
}

